# GRIM

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.discord  README.md  docker-compose.prod.yml  docker-compose.yml  meta.yaml  pyproject.toml  server.py  ws_diag.py
.changelog/: 20260224_205847_prompt_tuning_framework.md  20260225_202924_core_build_out_complete.md  20260225_214451_agent_trace_debug_panel.md  20260226_000000_mcp_async_fix_skills_audit.md  20260228_121844_personality_layer_shade.md  20260228_125300_cliproxyapi_system_prompt_fix.md  20260302_180000_ironclaw_404_fix_and_tests.md  20260302_220000_eval_framework_phase2_3.md  20260303_034017_graph_studio.md  20260303_121948_ironclaw-tool-pipeline.md  20260303_192238_session_knowledge_graph.md  20260304_103500_v010_core_loop_reshape.md  20260307_143037_execution_aware_coding_agent.md  README.md
.spec/: ironclaw-integration.spec.md
bridge/: Dockerfile  app.py  meta.yaml  requirements.txt  tracker.py
clients/: __init__.py  daemon_commands.py  discord_bot.py  meta.yaml
config/: cliproxyapi.yaml  grim.yaml  meta.yaml
core/: __init__.py  __main__.py  client.py  config.py  context.py  graph.py  graph_topology.py  memory_store.py  meta.yaml  model_router.py  objectives.py  reasoning_cache.py  state.py
engine/: Cargo.toml  Dockerfile  meta.yaml
eval/: __init__.py  __main__.py  config.py  meta.yaml  reports.py  schema.py
identity/: README.md  meta.yaml  personality.cache.md  personality.yaml  system_prompt.md
mcp/: meta.yaml
mcp/kronos/: .env.example  README.md  meta.yaml  pyproject.toml
mcp/kronos/src/kronos_mcp/: __init__.py  __main__.py  board.py  cache.py  calendar.py  fileutil.py  meta.yaml  permissions.py  search.py  server.py  skills.py  tasks.py  vault.py
mcp/pool/: meta.yaml  pyproject.toml
mcp/pool/skills/agent-monitor/: manifest.yaml  protocol.md
mcp/pool/skills/pool-manage/: manifest.yaml  protocol.md
mcp/pool/skills/workspace-manage/: manifest.yaml  protocol.md
mcp/pool/src/pool_mcp/: __init__.py  __main__.py  db.py  meta.yaml  server.py  skills.py
scripts/: deploy-remote.sh  migrate_stories_to_projects.py  release.sh
server/: __init__.py  app.py  conversation_store.py  meta.yaml  sessions.py
skills/: README.md  meta.yaml
spikes/: README.md  meta.yaml
tests/: conftest.py  meta.yaml  test_agent_comprehensive.py  test_agent_integration.py  test_agent_registry.py  test_base_agent_callable.py  test_bridge_tracker.py  test_client.py  test_codebase.py  test_codebase_agent.py  test_companion_router.py  test_concurrency.py  test_context_compression.py  test_conversation_store.py  test_daemon_context.py  test_daemon_dependencies.py  test_daemon_e2e.py  test_daemon_engine.py  test_daemon_github.py  test_daemon_health.py  test_daemon_intelligence.py  test_daemon_notifications.py  test_daemon_ownership.py  test_daemon_pipeline.py  test_daemon_planner.py  test_daemon_research.py  test_daemon_scanner.py  test_daemon_smoke.py  test_discord_bot.py  test_discord_pool.py  test_e2e_smoke.py  test_eval.py  test_full_pipeline.py  test_graph_router.py  test_graph_smoke.py  test_graph_topology.py  test_grim_core.py  test_inchat_pool.py  test_integration.py  test_intent_classifier.py  (+54 more)
tools/: _diag.py  meta.yaml  repo_loader.py  requirements.txt
(+433 files in other folders)
