[project]
name = "kronos-mcp"
version = "0.1.0"
description = "MCP server for the Kronos knowledge vault — FDO search, graph traversal, creation, and skill discovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2.0"]
cache = ["redis>=5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kronos-mcp = "kronos_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kronos_mcp"]
